--- a/easter.1
+++ b/easter.1
@@ -1,9 +1,6 @@
 .\" Manpage for easter.
-.\" Process with
-.\" groff -man -Tascii easter.1
-.\" groff -t -e -mandoc -Tps easter.1 > easter.ps
 .\" Contact jtrubat@uoc.edu to correct errors or typos.
-.TH man 1 "29 September 2016" "1.0" "easter man page"
+.TH man 1 "02 October 2016" "1.0" "easter man page"
 .SH NAME
 \fBeaster\fR displays the date of Easter.
 .SH SYNOPSIS
@@ -80,6 +77,9 @@ March 27 2005
 Jordi Trubat.
 .SH REPORTING BUGS
 Report bugs to <jtrubat@uoc.edu>
+.SH COPYRIGHT
+Copyright (C) 2016 Free Software Foundation, Inc. <http://fsf.org/>
+This is free software with ABSOLUTELY NO WARRANTY.
 .SH SEE ALSO
 .BR ncal (1)
 
