--- a/easter.1
+++ b/easter.1
@@ -1,10 +1,10 @@
 .\" Manpage for easter.
 .\" Contact jtrubat@uoc.edu to correct errors or typos.
-.TH man 1 "02 October 2016" "1.0" "easter man page"
+.TH man 1 "3 October 2016" "1.0" "easter man page"
 .SH NAME
 \fBeaster\fR displays the date of Easter.
 .SH SYNOPSIS
-\fBeaster\fR [-13yhv] [-B \fInumber\fR] [-A \fInumber\fR] [\fIyear\fR] ...
+\fBeaster\fR [-13yjhv] [-A \fInumber\fR] [-B \fInumber\fR] [\fIyear\fR] ...
 .SH DESCRIPTION
 \fBeaster\fR displays the date of easter for a given year - list of years. If
 arguments are not specified, the date for the current year is displayed.
@@ -12,6 +12,9 @@ arguments are not specified, the date for the current year is displayed.
 .IP \fB-y\fR
 Display the date of Easter for the specified year. Without argument the current
 year is implied.
+.TP
+.B "-j, --julian"
+Force julian Easter. For year before 1583 this is the default.
 .IP \fB-3\fR
 Display the previous, current and next date of Easter surrounding the specified
 year.
@@ -73,6 +76,14 @@ April 20 2003
 April 11 2004
 .br
 March 27 2005
+.LP
+$ easter 900
+.br
+April 20 900
+.LP
+$ easter -j 2000
+.br
+April 17 2000
 .SH AUTHOR
 Jordi Trubat.
 .SH REPORTING BUGS
