command parameter bug fixed

--- a/easter.1
+++ b/easter.1
@@ -14,7 +14,7 @@ Display the date of Easter for the specified year. Without argument the current
 year is implied.
 .TP
 .B "-j, --julian"
-Force julian Easter. For year before 1583 this is the default.
+Julian Easter. For year before 1583 this is the default.
 .IP \fB-3\fR
 Display the previous, current and next date of Easter surrounding the specified
 year.
