--- a/easter.1
+++ b/easter.1
@@ -1,10 +1,10 @@
 .\" Manpage for easter.
 .\" Contact jtrubat@uoc.edu to correct errors or typos.
-.TH man 1 "3 October 2016" "1.0" "easter man page"
+.TH EASTER 1 "3 October 2016" "1.0" "easter man page"
 .SH NAME
-\fBeaster\fR displays the date of Easter.
+\fBeaster\fR - Displays the date of Easter.
 .SH SYNOPSIS
-\fBeaster\fR [-13yjhv] [-A \fInumber\fR] [-B \fInumber\fR] [\fIyear\fR] ...
+\fBeaster\fR [ -13yjhv ] [-A \fInumber\fR] [-B \fInumber\fR] [ \fIyear ...\fR ]
 .SH DESCRIPTION
 \fBeaster\fR displays the date of easter for a given year - list of years. If
 arguments are not specified, the date for the current year is displayed.
