--- a/easter.1
+++ b/easter.1
@@ -1,5 +1,20 @@
-.\" Manpage for easter.
-.\" Contact jtrubat@uoc.edu to correct errors or typos.
+.\"	 Manpage for easter.
+.\" 	This file is part of Easter.
+.\"
+.\"     Easter is free software: you can redistribute it and/or modify
+.\"     it under the terms of the GNU General Public License as published by
+.\"     the Free Software Foundation, either version 3 of the License, or
+.\"     (at your option) any later version.
+.\" 
+.\"     Easter is distributed in the hope that it will be useful,
+.\"     but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\"     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+.\"     GNU General Public License for more details.
+.\" 
+.\"     You should have received a copy of the GNU General Public License
+.\"     along with this program.  If not, see <http://www.gnu.org/licenses/>.
+.\"     
+.\"     The author can be contacted at <jtrubat@uoc.edu>
 .TH EASTER 1 "3 October 2016" "1.0" "easter man page"
 .SH NAME
 \fBeaster\fR - Displays the date of Easter.
